# crystals_trucks_project

./: .coverage  .gitignore  .pre-commit-config.yml  LICENSE  README.md  conftest.py  coverage.xml  execute.sh  main.py  pyproject.toml  requirements.txt  setup.cfg  test_2.py  test_TU.py  test_game.py  test_map.txt  tox.ini
.github/workflows/: README.md  cov.yml  coverage.yml  live_coverage.yml  precommit.yml  python.yml
code/: game.py  main.py  map.txt  test_map.txt
src/: README.md  main.py  trucks.py
src/trucks.egg-info/: PKG-INFO  SOURCES.txt
test/: test_trucks.py
tests/: README.md  test_game.py  test_main.py  test_pytest.py  test_trucks.py
